css/app.css
/* RESET */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: currentColor;
}

img {
    max-width: 100%;
}

ul, ol, menu {
    list-style: none;
}

button {
    border: none;
}


/* LAYOUT */

.container-lg {
    max-width: 1920px;
    margin: 0 auto;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
}

.container-sm {
    max-width: 1000px;
    margin: 0 auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.col-8 {
    width: calc(8 * 100% / 12);
}

.col-4 {
    width: calc(4 * 100% / 12);
}

/* STYLE */

body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

/* BUTTON */

.bluebtn {
    background-color: #0061FF;
    color: white;
    padding: 8px 16px;
 
}

.whitebtn {
    background-color: white;
    color: black;
    border: 2px solid black;
}

/* HEADER */

.navbar > ul {
    display: flex;
    gap: 16px;
}

.navbar {
    justify-content: space-between;
    align-items: center;
    padding: 26px 18px;
    font-size: 24px;
    font-weight: 200;
}

/* MAIN HERO */

.hero {
    background-color: #B4D0E7;
    
}

h1 {
    font-size: 100px;
    padding-top: 100px;
    padding-bottom: 60px;
}

.hero__info {
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
}

.hero__info > * {
    margin-bottom: 32px;
}

.hero__arrow {
    margin-top: auto;
    font-size: 32px;
    font-weight: 600;
}

